--- a/www/index.html
+++ b/www/index.html
@@ -29,19 +29,19 @@
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Hello World</title>
         <script type="text/javascript" src="js/lib/jquery-2.1.1.min.js"></script>
-        <script type="text/javascript" src="js/lib/handlebars.js"></script>
+        <script type="text/javascript" src="js/lib/handlebars-v2.0.0.js"></script>
     </head>
     <body>
     <script id="home-tpl" type="text/x-handlebars-template">
         <div class='header'><h1>Home</h1></div>
-        <div class='search-bar'><input class='search-key' type="text"/></div>
-        <ul class='employee-list'></ul>
+        <div class='search-bar'>Look at this Handlebars shit!</div>
+        <!--<ul class='employee-list'></ul>-->
     </script>
-    <script id="employee-li-tpl" type="text/x-handlebars-template">
+    <!--<script id="employee-li-tpl" type="text/x-handlebars-template">
         {{#.}}
         <li><a href="#employees/{{this.id}}">{{this.firstName}} {{this.lastName}}<br/>{{this.title}}</a></li>
         {{/.}}
-    </script>
+    </script>-->
         <div class="app">
             <h1>PhoneGap</h1>
             <div id="deviceready" class="blink">
