--- a/www/index.html
+++ b/www/index.html
@@ -33,8 +33,8 @@
     </head>
     <body>
     <script id="home-tpl" type="text/x-handlebars-template">
-        <div class='header'><h1>Home</h1></div>
-        <div class='search-bar'>Look at this Handlebars shit!</div>
+        <div class='header'><h1>Pterosaur</h1></div>
+        <div class='search-bar'>{{this.name}}</div>
         <!--<ul class='employee-list'></ul>-->
     </script>
     <!--<script id="employee-li-tpl" type="text/x-handlebars-template">
@@ -51,6 +51,7 @@
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
+        <script src="js/storage/ls-store.js"></script>
         <script type="text/javascript">
             app.initialize();
         </script>
