--- a/www/index.html
+++ b/www/index.html
@@ -1,24 +1,4 @@
 <!DOCTYPE html>
-<!--
-    Copyright (c) 2012-2014 Adobe Systems Incorporated. All rights reserved.
-
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
 <html>
     <head>
         <meta charset="utf-8" />
@@ -34,8 +14,9 @@
     <body>
     <script id="home-tpl" type="text/x-handlebars-template">
         <div class='header'><h1>Pterosaur</h1></div>
-        <div class='search-bar'>{{this.name}}</div>
-        <!--<ul class='employee-list'></ul>-->
+        {{#pterosaurs}}
+        {{name}}<br/>{{image1}}
+        {{/pterosaurs}}
     </script>
     <!--<script id="employee-li-tpl" type="text/x-handlebars-template">
         {{#.}}
@@ -50,8 +31,9 @@
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="js/IndexView.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-        <script src="js/storage/ls-store.js"></script>
+        <script src="js/storage/data.js"></script>
         <script type="text/javascript">
             app.initialize();
         </script>
