--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
                 {{#pterosaurs}}
                     <li>
                         <div class="thumbnail" style="background: url(img/pterosaurs/{{image1}}) no-repeat"></div>
-                        {{name}}<br/>
+                        <h2>{{name}}</h2>
                         {{description}}<br/>
                         {{geography}}<br/>
                         {{geology}}<br/>
